# rmg_cpp_projects_libs

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
IoT/: CMakeLists.txt  DataProcessor.cpp  Forklift.hpp  KalmanFilter.cpp  README.md  Test.cpp  initial_data_generator.cpp  initial_data_processing.cpp
IoT_project/: CMakeLists.txt  Communicator.hpp  DataGenerator.cpp  DataProcessor.cpp  Forklift.hpp  KalmanFilter.cpp  KalmanFilter.hpp  README.md  Sensor.hpp  Test.cpp  generator.cpp  initial_data_generator.cpp  initial_data_processing.cpp  processor.cpp  test_data.cpp
Modules/: FindGLFW3.cmake
allocator/: CMakeLists.txt  benchmark.cpp  main.cpp  memory_pool_allocator.hpp  segregator.hpp  test.cpp  tracking_allocator.hpp
computer_graphics/: CMakeLists.txt
computer_graphics/algorithms/: CMakeLists.txt  bubble_sort.cpp
computer_graphics/ray_tracing/: CMakeLists.txt  cudart.exp  hitable.hpp  hitable_list.hpp  ray.hpp  ray_tracing.cu  sphere.hpp  vec3.hpp
cse_algorithms/: CMakeLists.txt
cse_algorithms/CFD/: CMakeLists.txt  Fluid.h  draw.cpp  draw_C.cpp  draw_v1.cpp  main.cpp  test.cpp
cse_algorithms/bezier_functions/: CMakeLists.txt  main.cpp
cse_algorithms/fourier_transform/: CMakeLists.txt  README.md  drawing_coords.hpp  fourier_drawing.cpp  fourier_drawing_circle.cpp  fourier_drawing_general_path.cpp  fourier_series_visualization.cpp  main.cpp
deep_learning/: CMakeLists.txt  dl.cpp  market_prediction.cpp  mxnet_test.cpp  torch_test.cpp
deep_learning/facial_keypoints/: CMakeLists.txt  README.md  facial_keypoints.cpp  facial_keypoints.hpp  facial_keypoints_model.hpp
deep_learning/include/: data_utils.hpp  layer.hpp  layer_utils.hpp  linear.hpp  optim.hpp  sequential.hpp  utils.hpp
deep_learning/src/: data_utils.cpp
gaming/: CMakeLists.txt
gaming/asteroids/: CMakeLists.txt  main.cpp  test.cpp
gaming/fast2048/: 2048_interface.cpp  CMakeLists.txt  README.md  board_2048.hpp  fast2048.cpp  game_2048.hpp  monte_carlo_search.hpp  test.cpp  test2048_ml.cpp  utils2048.hpp
gaming/game_automation/: CMakeLists.txt  pong.cpp  test.cpp
gaming/game_automation/flappy_bird/: CMakeLists.txt  flappy_bird.cpp
gaming/game_automation/pong/: CMakeLists.txt  pong.cpp
img_processing_library/: CMakeLists.txt  README.md  decode_jpg.cpp  image.hpp  main.cpp  png_decoder.cpp
img_processing_library/fourier_transform/: CMakeLists.txt  README.md  main.cpp
math/fft/: README.md
math/tensor/include/: tensor.hpp
test/: CMakeLists.txt  test1.cpp
util/: CMakeLists.txt
util/bits/: stdc++.h
util/csv/: CMakeLists.txt  csv.cpp  csv.hpp  test_csv_parser.cpp
util/include/: cv_utils.hpp  eigen_utils.hpp  profiler.hpp  spinlock.hpp  util.h  util.hpp
util/network/: CMakeLists.txt
util/network/include/: http.hpp  http_client.hpp  http_server.hpp  tcp_connection.hpp  tcp_connection_manager.hpp  tcp_connector.hpp  tcp_handler.hpp  tcp_server.hpp  tcp_util.hpp  ws_client.hpp  ws_server.hpp
util/network/src/: http_client.cpp  http_server.cpp  tcp_test.cpp
