set(SOURCES "main.cpp")
add_executable(img_proc_fourier_transform ${SOURCES})
set_target_properties(img_proc_fourier_transform PROPERTIES CXX_STANDARD 20 CXX_STANDARD_REQUIRED ON)
target_include_directories(img_proc_fourier_transform PUBLIC  "include" "../../util/include" "../../vendors/phmap_parallel_hashmap" "../../vendors")

# find_package(Eigen3 3.3 REQUIRED)
# find_package(Boost REQUIRED)
find_package(Threads REQUIRED)
find_package(OpenCV REQUIRED)
# find_package(X11 REQUIRED)
# include_directories( ${OpenCV_INCLUDE_DIRS} )

target_link_libraries(img_proc_fourier_transform Threads::Threads)
target_link_libraries(img_proc_fourier_transform ${OpenCV_LIBS})
# target_link_libraries(img_proc_fourier_transform X11::X11)
# target_link_libraries(img_proc_fourier_transform X11::Xtst)
# include_directories(${EIGEN3_INCLUDE_DIR})

find_package(PNG REQUIRED)
include_directories(${PNG_INCLUDE_DIR})
target_link_libraries(img_proc_fourier_transform ${PNG_LIBRARY})